div id preprocess-duration to show duration value in ms

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 					<canvas id="canvas" ></canvas>
 					<h2>Output</h2>
 					<canvas id="outputCanvas" ></canvas>
+					<div id="preprocess-duration"></div>
 					<button onclick="stopCapture()">Detener</button>
 				</div>
 			</div>
