--- a/test.html
+++ b/test.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-	<h2>Video input</h2>
+	<h1>Test</h1>
+	<h2>Video input</h2><br/>
 	<video id="video" autoplay width="640" height="480"></video>
 	<canvas id="input" ></canvas>
 
 	<h2>Output</h2>
+	<input type="checkbox" id="run" checked />
 	<canvas id="output" ></canvas>
 	<div>Input video resolution: <span id="resolution"></span> px</div>
 	<div>Preprocess duration: <span id="preprocess-duration"></span> ms</div>
@@ -21,7 +23,7 @@
 	<div id="duration-list"></div>
 	
 	<!--<script src="trigger.js" type="text/javascript"></script>-->
-	<script src="index.js" type="text/javascript"></script>
+	<script src="test.js" type="text/javascript"></script>
 	<script async src="wasm/preprocessor.js" type="text/javascript"></script><!-- WebASM Module import -->
 </body>
 </html>
